--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
+    implementation 'com.google.firebase:firebase-auth-ktx'
     def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -62,4 +63,5 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation platform('com.google.firebase:firebase-bom:30.3.1')
+
 }
